kubernetes/flask-demployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-flask
  labels:
    name: hello-flask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-flask
  template:
    metadata:
      labels:
        app: hello-flask
    spec:
      containers:
      - name: hello-flask
        image: pijanyrecznik/hello-flask:latest
        imagePullPolicy: IfNotPresent
