kubernetes/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-flask
  labels:
    service: hello-flask
spec:
  selector:
    app: hello-flask
  ports:
  - port: 5000
    targetPort: 5000
