kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minikube-ingress
  annotations:
spec:
  rules:
    - host: hello.world
      http:
        paths:
          - path: /
            backend:
              serviceName: hello-flask
              servicePort: 5000
